--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<header class="header-section clearfix">
 		<div class="container-fluid">
 			<a href="index.html" class="site-logo">
-				<h2>THub <span><img src="img/logo3.jpg" width="90" alt=""></span></h2>
+				<h2>TenderHub <span><img src="img/logo3.jpg" width="50" alt=""></span></h2>
 					
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
