--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<header class="header-section clearfix">
 		<div class="container-fluid">
 			<a href="index.html" class="site-logo">
-				<h2>TenderHub <span><img src="img/logo3.jpg" width="50" alt=""></span></h2>
+				<h6>TenderHub <span><img src="img/logo3.jpg" width="40" alt=""></span></h6>
 					
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 hero-text">
-					<h2>Your Central Hub for <span> Tenders</span> <br>in Uganda</h2>
+					<h2>Central Hub for <span> Tenders</span> <br>in Uganda</h2>
 					<h4>Get the latest tenders' Update. Search, view, and download documents — all in one place.</h4>
 					<form class="hero-subscribe-from">
 						<input type="text" placeholder="Enter your email">
